--- a/styles/Pokeman.module.css
+++ b/styles/Pokeman.module.css
@@ -18,11 +18,10 @@
 }
 
 .image {
-  margin: 0 auto;
+  position: relative;
   width: 100%;
-  height: 100%;
-  max-width: 50%;
-  max-height: 50%;
+  height: 240px;
+  max-height: 100%;
 }
 
 .link {
